--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "express-session": "^1.17.2",
     "handlebars": "^4.7.7",
     "mongodb": "^4.2.1",
-    "multer": "^1.4.4"
+    "multer": "^1.4.4",
+    "xss": "^1.0.10"
   },
   "name": "cs546_c_group12_final_project",
   "version": "1.0.0",
